# tour-guide-code-module

./: .gitignore  Dockerfile  README.md  startup_script.sh
.devcontainer/: devcontainer.json
.github/workflows/: frontend_CI.yml  motor_microcontroller_CI.yml  sensor_microcontroller_CI.yml
firmware/motor_microcontroller/extra_packages/: extra_packages.repos
firmware/motor_microcontroller/src/: main.cpp  microRosFunctions.cpp
firmware/sensor_microcontroller/: README.md  platformio.ini
firmware/sensor_microcontroller/include/: ADCFunctions.h  FanFunctions.h  FingerprintFunctions.h  IMUFunctions.h  JoystickFunctions.h  LidarFunctions.h  LightFunctions.h  PIRFunctions.h  PWMFunctions.h  UltrasonicFunctions.h  microRosFunctions.h
firmware/sensor_microcontroller/src/: ADCFunctions.cpp  FanFunctions.cpp  FingerprintFunctions.cpp  IMUFunctions.cpp  JoystickFunctions.cpp  LidarFunctions.cpp  LightFunctions.cpp  PIRFunctions.cpp  (+4 more)
frontend/: .gitignore  README.md  biome.json  forge.config.js  package-lock.json  package.json  ros-ts-generator-config.json  tsconfig.node.json  tsconfig.web.json
scripts/: flash_pico.py
src/autogiro/: package.xml  setup.cfg  setup.py
src/autogiro/autogiro/: listener.py  qos_profiles.py  talker.py  temp_monitor.py
src/autogiro/autogiro/nodes/: listener.py  sensors_subscriber.py  talker.py  temp_monitor.py
src/autogiro/launch/: autogiro.launch.py
src/autogiro_interfaces/: CMakeLists.txt  package.xml
src/autogiro_interfaces/msg/: Brake.msg  DacValues.msg  FanSpeed.msg  Light.msg  Motors.msg  RefSpeed.msg  SensorError.msg  Sensors.msg  Status.msg
src/autogiro_utils/: package.xml  setup.cfg  setup.py
src/autogiro_utils/autogiro_utils/: remote_logger.py
(+28 files in other folders)
