<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autogiro</name>
  <version>0.0.1</version>
  <description>Autogiro publisher and subscriber nodes</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>autogiro_interfaces</exec_depend>
  <exec_depend>autogiro_utils</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
