<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autogiro_utils</name>
  <version>0.0.1</version>
  <description>Shared utilities for the autogiro project</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
